--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 body { position:relative;	color:#666;	font:300 15px/15px Roboto,Arial,Helvetica;background-color:#fff;-webkit-font-smoothing:antialiased;background-color: #eee;}
 
+/* .a */
 a{color:#28a84f; text-decoration:none;}
 a:hover{color:#666;}
 .btn,a,.btn:hover,a:hover {
@@ -11,6 +12,9 @@ transition: all 0.3s ease-in-out;
 outline: none !important;
 }
 
+/* --- */
+
+/* Typography */
 h1,h2,h3,h4{margin: 0;line-height: 1em;}
 h1{font:700 3em Raleway,Arial,Helvetica;padding:5em 0;text-transform: uppercase;color: #fff;}
 h2{font:700 1.5em Raleway,Arial,Helvetica;margin-bottom: 1.5em; color: #044c1a;}
@@ -18,11 +22,13 @@ h3{font:700 1.25em Raleway,Arial,Helvetica;margin:0.5em 0;}
 
 p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 
+/* ---- */
+
 .container{width: 100%; max-width: 1400px;}
 .wrapper{background-color: #fff;}
 .spacer{padding:5em; padding-bottom:0; }
 
-
+/* Buttons */
 .btn{border:none;border-radius: 0;padding: 0.75em 3em;text-transform: uppercase;}
 .btn-danger{background: rgb(40, 168, 79) !important;}
 .btn-danger:hover{background-color: #077c2b !important; 
@@ -34,7 +40,11 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 .btn-danger:active{background-color: #044c1a !important; }
 .btn:hover,.btn:active{color: #fff;box-shadow: none;}
 
+/* ------ */
 
+/* Navbar */
+
+.navbar {box-shadow: 0 0.2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
 .navbar-nav > li > a{font-size: 1em;line-height:2em;}
 .navbar-inverse{background: #111;}
 .navbar-brand{color: #fff !important;background: #044c1a  !important;margin-left: 0 !important;height: 60px;padding: 1em;font:700 1.25em Raleway; }
@@ -52,14 +62,22 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 	transition: all 0.3s ease-in-out;
 	background:#d4d4d4;}
 
+/* -------- */
+
+/* banner */
 .banner{background:url(../images/banner.jpg) #000;margin-top: 4em;background-size: cover;}
 .overlay{background:rgba(40, 168, 79, 0.9);}
 
+/* ------ */
+
+/* Carousel controllers */
 
 .carousel-control{width: 10%;}
 .carousel-control i.fa{top: 50%;position: absolute;margin-top: -30px;left: 0;right: 0;}
 .carousel .item a.view{position: absolute;top: -10%;left:50%;text-align: center;background: rgb(40, 168, 79);color: #fff;display: inline-block;padding:0.75em 2em;font-size: 1.25em;margin-top: -24px;margin-left: -70px;}
 .carousel .item:hover a.view{top:50%;text-decoration: none;}
+
+/* ------- */
 
 
 .service{padding:0 10em 2em 10em; color: #fff;}
@@ -68,14 +86,31 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 .social a{margin-right: 1em;}
 
 
+/* body */
 
 
+
+/* ---- */
+
+/* Contact */
+
+.contact {padding-top: 2em;}
+
+/* ------ */
+
+
+/* Footer */
 .footer{background-color: #111; color: #fff; font-size: 1em;color: #aaa;padding: 3em;}
 .footer a{color: #aaa;margin: 0 1em; }
 
 .gototop{position: fixed;bottom: 20px; right: 20px;background: rgba(0,0,0,0.5);padding: 10px;color: #fff;}
 .gototop i{line-height: 0.5em;}
 
+/* ------ */
+
+
+
+/* Media Queries */
 
 @media (max-width: 1200px) {		
 	.spacer{padding: 2em;}
@@ -106,3 +141,5 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 	.footer{margin-top: 2em;padding-bottom: 2em;}
 
 }
+
+/* -------- */
