--- a/assets/style.css
+++ b/assets/style.css
@@ -67,6 +67,7 @@ p{font-size:1em;line-height: 1.7em; margin-bottom: 1.7em;}
 /* banner */
 .banner{background:url(../images/banner.jpg) #000;margin-top: 4em;background-size: cover;}
 .overlay{background:rgba(40, 168, 79, 0.9);}
+.top-logo{padding-top: 4em; width: 17em;}
 
 /* ------ */
 
